[workspace]
members = [
    "examples/rust", # 1.11.0+solana.1.16.18
    "yellowstone-grpc-client", # 1.12.0+solana.1.16.18
    "yellowstone-grpc-geyser", # 1.11.0+solana.1.16.18
    "yellowstone-grpc-proto", # 1.11.0+solana.1.16.18
    # "yellowstone-grpc-tools", # 1.0.0-rc.6+solana.1.16.18
]

[profile.release]
debug = true
lto = true
codegen-units = 1

[patch.crates-io]
solana-account-decoder = { git = "https://github.com/rpcpool/solana-public.git", tag = "v1.16.18-geyser-block-v3-mango" }
solana-geyser-plugin-interface = { git = "https://github.com/rpcpool/solana-public.git", tag = "v1.16.18-geyser-block-v3-mango" }
solana-logger = { git = "https://github.com/rpcpool/solana-public.git", tag = "v1.16.18-geyser-block-v3-mango" }
solana-program = { git = "https://github.com/rpcpool/solana-public.git", tag = "v1.16.18-geyser-block-v3-mango" }
solana-sdk = { git = "https://github.com/rpcpool/solana-public.git", tag = "v1.16.18-geyser-block-v3-mango" }
solana-transaction-status = { git = "https://github.com/rpcpool/solana-public.git", tag = "v1.16.18-geyser-block-v3-mango" }
